charon/tests/ui/unsupported/gat.out
thread 'rustc' panicked at src/bin/charon-driver/translate/translate_predicates.rs:357:17:
assertion failed: nested.is_empty()
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::ArraySize`.
 --> tests/ui/unsupported/gat.rs:5:1
  |
5 | trait ArraySize {
  | ^^^^^^^^^^^^^^^

error: Ignoring the following item due to an error: test_crate::ArraySize
 --> tests/ui/unsupported/gat.rs:5:1
  |
5 | trait ArraySize {
  | ^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Error: Charon driver exited with code 101
